# mfoil

./: .gitignore  LICENSE  README.md  mfoil_original.py  pyproject.toml
mfoil/: geometry.py  inviscid.py  mfoil.py  panel.py  plotting.py  solver.py  utils.py
tests/: mfoil_original.py  ping.py  regression_test.py
