[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mfoil"
version = "0.1"
description = "Package for mfoil"
authors = [
    {name = "Sieds Lykles", email = "93992551+S-Lykles@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mfoil*"]
namespaces = false
